# nudgeplace

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml  tach.toml
.claude/: settings.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/conformance_a/: apps.py  services.py
apps/conformance_b/: apps.py  internal.py  services.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  ci.py  local.py
docs/: roadmap.md
docs/adr/: 0001-modular-monolith.md  0002-boundary-enforcement-tach.md  0003-shared-kernel-unidirectional.md  0004-storage-postgresql.md  0005-money-minor-units.md
scripts/: ruff-fix.sh
shared_kernel/: __init__.py  actors.py  apps.py  audit.py  correlation.py  events.py  idempotency.py  models.py  money.py
shared_kernel/migrations/: 0001_idempotency.py  0002_audit.py  0003_add_tracing_indexes.py
specs/000-foundation-structure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-shared-kernel-primitives/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/boundary/: conftest.py  test_boundary_contract.py  test_boundary_meta.py  test_module_registration.py
tests/ci/: test_ci_contract.py
tests/conformance/: test_fixture_scope.py  test_public_interface.py
tests/docs/: test_docs_ownership.py
(+17 files in other folders)
